--- a/Chernei_Ivan_Lab05_Personal_Description_C2.html
+++ b/Chernei_Ivan_Lab05_Personal_Description_C2.html
@@ -15,7 +15,7 @@
         <p><strong>Nume:</strong> Chernei</p>
         <p><strong>Prenume:</strong> Ivan</p>
         <p><strong>E-mail:</strong> cherni.le.ivan@student.utcluj.ro</p>
-        <img src="Images/poza_mea.jpg" alt="Poza de profil" width="200" height="250">
+        <img src="Image/poza_mea.jpg" alt="Poza de profil" width="200" height="250">
     </section>
 
     <section>
